# iEDA

./: .CMakeLists.txt.swp  .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README-CN.md  README-En.md  README.md  autoCopyright.py  build.sh
src/apps/: CMakeLists.txt  ieda_main.cpp
src/database/example/: CMakeLists.txt  main.cpp  main_verilog.cpp
src/evaluation/: CMakeLists.txt  README.md  ieval.cmake
src/evaluation/api/: CMakeLists.txt  EvalAPI.cpp  EvalAPI.hpp  congestion_api.cpp  congestion_api.h  density_api.cpp  density_api.h  ids.hpp  timing_api.cc  timing_api.hh  union_api.cpp  union_api.h  wirelength_api.cpp  wirelength_api.h
src/evaluation/apps/: CMakeLists.txt  congestion_app.cpp  density_app.cpp  timing_app.cc  union_app.cpp  wirelength_app.cpp
src/evaluation/data/: CMakeLists.txt  CongBin.cpp  CongBin.hpp  CongInst.hpp  CongNet.hpp  CongPin.hpp  CongTile.hpp  GDSNet.hpp  GDSPin.hpp  GDSPort.hpp  GDSViaNodes.hpp  GDSWireNodes.hpp  TimingNet.cpp  TimingNet.hpp  TimingPin.hpp  WLNet.cpp  WLNet.hpp  WLPin.hpp
src/evaluation/database/: congestion_db.h  density_db.h  summary_db.cpp  summary_db.h  wirelength_db.h
src/evaluation/source/: CMakeLists.txt
src/evaluation/source/config/: CMakeLists.txt  Config.cpp  Config.hpp  CongConfig.hpp  DBConfig.hpp  DRCConfig.hpp  GDSWrapperConfig.hpp  PowerConfig.hpp  TimingConfig.hpp  WLConfig.hpp  ysyx_eval_t110.json  ysyx_eval_t28.json
src/evaluation/source/module/: CMakeLists.txt  manager.cpp  manager.hpp
src/evaluation/source/util/: CMakeLists.txt  EvalLog.cpp  EvalLog.hpp  EvalMagicEnum.hpp  EvalPoint.hpp  EvalRect.hpp  EvalType.hpp  EvalUtil.hpp
src/evaluation/src/module/: CMakeLists.txt
src/evaluation/src/util/: CMakeLists.txt  general_ops.cpp  general_ops.h  init_egr.cpp  init_egr.h  init_idb.cpp  init_idb.h  init_sta.cc  init_sta.hh  wirelength_lut.cpp
src/evaluation/test/: CMakeLists.txt  ConfigTest.cpp  CongAPITest.cpp  CongestionTest.cpp  EGRWLTest.cpp  GDSAPITest.cpp  GDSWrapperTest.cpp  TimingAPITest.cpp  WirelengthAPITest.cpp  WirelengthTest.cpp
src/evaluation_pro/: CMakeLists.txt
src/evaluation_pro/api/: CMakeLists.txt  congestion_api.cpp  congestion_api.h  density_api.cpp  density_api.h  timing_api.cc  timing_api.hh  wirelength_api.cpp  wirelength_api.h
src/evaluation_pro/apps/: CMakeLists.txt  congestion_app.cpp  density_app.cpp  timing_app.cc  wirelength_app.cpp
src/evaluation_pro/database/: CMakeLists.txt  congestion_db.h  density_db.h  summary_db.cpp  summary_db.h  timing_db.h  timing_db.hh  wirelength_db.h
src/evaluation_pro/src/: CMakeLists.txt
src/evaluation_pro/src/module/: CMakeLists.txt
src/evaluation_pro/src/util/: CMakeLists.txt  general_ops.cpp  general_ops.h  init_egr.cpp  init_egr.h  init_flute.cpp  init_flute.h  init_idb.cpp  init_idb.h  init_sta.cc  init_sta.cpp  init_sta.h  init_sta.hh  wirelength_lut.cpp  wirelength_lut.h
src/feature/: CMakeLists.txt  feature_manager.cpp  feature_manager.h
src/feature/builder/: CMakeLists.txt  feature_builder.cpp  feature_builder.h  feature_builder_tool.cpp  feature_eval_congestion.cpp  feature_eval_density.cpp  feature_eval_timing.cc  feature_eval_union.cpp  feature_eval_wirelength.cpp  feature_timing_eval.cc  route_builder.cpp  route_builder.h
src/feature/database/: CMakeLists.txt  feature_db.h  feature_eval.h  feature_icts.h  feature_ieval.h  feature_ino.h  feature_ipl.h  feature_ipw.h  feature_irt.h  feature_ista.h  feature_ito.h  feature_summary.cpp  feature_summary.h
src/feature/parser/: CMakeLists.txt  feature_parser.cpp  feature_parser.h  feature_parser_eval.cpp  feature_parser_summary.cpp  feature_parser_tools.cpp
src/interface/gui/: .clang-format  CMakeLists.txt
src/interface/gui/res/: source.qrc
src/interface/mcp-iEDA/: Dockerfile  README.md  pyproject.toml
src/interface/python/: CMakeLists.txt  python_module.h  python_moodule.cpp
src/interface/tcl/: CMakeLists.txt  tcl_definition.h  tcl_main.h  tcl_register.cpp  tcl_register.h
src/large_model/src/: CMakeLists.txt  large_model.cpp  large_model.h
src/operation/: CMakeLists.txt
src/operation/iCTS/: CMakeLists.txt  README.md
src/operation/iDRC/: .clang-format  CMakeLists.txt  README.md
src/operation/iDRCPro/: CMakeLists.txt
src/operation/iECO/: CMakeLists.txt
src/operation/iFP/: README.md
src/operation/iIR/: .gitignore  CMakeLists.txt  README.md  main.cc
src/operation/iMP/: .clang-format  CMakeLists.txt
src/operation/iNO/: CMakeLists.txt  README.md
src/operation/iPA/: .clang-tidy  CMakeLists.txt  README.md  README_CN.md  main.cc
src/operation/iPL/: CMakeLists.txt  README.md
src/operation/iPNP/: CMakeLists.txt  README.md  main.cpp
src/operation/iPW/: .gitignore  CMakeLists.txt  main.cc
src/operation/iRT/: CMakeLists.txt  README.md
src/operation/iSTA/: CMakeLists.txt  README.md  README.zh-cn.md  main.cc
src/operation/iTO/: .clang-format  CMakeLists.txt  README.md
src/utility/: .clang-tidy  CMakeLists.txt
src/utility/gpu/: cuda_common.cuh  kernel_common.h
src/utility/json/: CMakeLists.txt  json_parser.h
src/utility/log/: CMakeLists.txt  Log.cc  Log.hh
src/utility/memory/: CMakeLists.txt  MemoryMonitor.cc  MemoryMonitor.hh
src/utility/notification/: CMakeLists.txt  NotificationUtility.cpp  NotificationUtility.h  README.md
src/utility/report/: CMakeLists.txt  ReportTable.cc  ReportTable.hh
src/utility/stdBase/: CMakeLists.txt
src/utility/string/: CMakeLists.txt  Str.cc  Str.hh  StrMap.cc  StrMap.hh
src/utility/tcl/: CMakeLists.txt  ScriptEngine.cc  ScriptEngine.hh  UserShell.cc  UserShell.hh
src/utility/test/: AdjListGraphTest.cc  ArrayCompareTest.cc  ArrayCompareTestSTL.cc  ArrayListTest.cc  ArrayTest.cc  CompareTest.cc  HashMapTest.cc  HashSetTest.cc  ListTest.cc  LogTest.cc  MapTest.cc  MemoryPoolTest.cc  ScriptEngineTest.cc  SetTest.cc  StrTest.cc  TimeTest.cc  VectorCompareTest.cc  VectorCompareTestSTL.cc  VectorTest.cc
src/utility/time/: CMakeLists.txt  Time.cc  Time.hh
src/utility/usage/: CMakeLists.txt  usage.cc  usage.hh
(+4192 files in other folders)
